Changed every collect to toList()